--- a/Test_Get_Match_Images.ipynb
+++ b/Test_Get_Match_Images.ipynb
@@ -20,7 +20,7 @@
     "df = pd.read_excel(\"planilha_imagens_fake.xlsx\")\n",
     "\n",
     "path_dict = \"dict_url.json\"\n",
-    "with open(path_dict, 'r') as json_file:\n",
+    "with open(path_dict, \"r\") as json_file:\n",
     "    dict_url = json.load(json_file)"
    ]
   },
@@ -104,7 +104,7 @@
     }
    ],
    "source": [
-    "out = Results(df = df, folder_path = 'target_images', threshold = 0.8, dict_url = dict_url)\n",
+    "out = Results(df=df, folder_path=\"target_images\", threshold=0.8, dict_url=dict_url)\n",
     "df_out = out.create_output()\n",
     "df_out.head()"
    ]
