--- a/Test_Get_Match_Prices.ipynb
+++ b/Test_Get_Match_Prices.ipynb
@@ -10,7 +10,8 @@
     "import json\n",
     "from results_prices import Results\n",
     "import re\n",
-    "pd.set_option('display.max_colwidth', None)"
+    "\n",
+    "pd.set_option(\"display.max_colwidth\", None)"
    ]
   },
   {
@@ -22,7 +23,7 @@
     "df = pd.read_excel(\"prices_fake_allsites.xlsx\")\n",
     "\n",
     "path_dict = \"dict_url.json\"\n",
-    "with open(path_dict, 'r') as json_file:\n",
+    "with open(path_dict, \"r\") as json_file:\n",
     "    dict_url = json.load(json_file)"
    ]
   },
@@ -469,8 +470,10 @@
     }
    ],
    "source": [
-    "#df = df.head(3)\n",
-    "out = Results(df, dict_url = dict_url, openai_api_key = '', openai_api_base ='', openai_api_version='')\n",
+    "# df = df.head(3)\n",
+    "out = Results(\n",
+    "    df, dict_url=dict_url, openai_api_key=\"\", openai_api_base=\"\", openai_api_version=\"\"\n",
+    ")\n",
     "out = out.output()\n",
     "out.head(30)"
    ]
