--- a/tiktoken.ipynb
+++ b/tiktoken.ipynb
@@ -27,7 +27,7 @@
     "encoding = tiktoken.encoding_for_model(\"gpt-3.5-turbo\")\n",
     "\n",
     "description = \"Rosuvastatina Cálcica 20mg Genérico Medley 30 Comprimidos Revestidos\\n46% OFF\\nR$ 88,16\\nR$ 48,09\\nVER DESCONTOS CONVÊNIO\"\n",
-    "prompt = f'''Rosuvastatina Cálcica 20mg Genérico Medley 30 Comprimidos Revestidos\\n46% OFF\\nR$ 88,16\\nR$ 48,09\\nVER DESCONTOS CONVÊNIO\n",
+    "prompt = f\"\"\"Rosuvastatina Cálcica 20mg Genérico Medley 30 Comprimidos Revestidos\\n46% OFF\\nR$ 88,16\\nR$ 48,09\\nVER DESCONTOS CONVÊNIO\n",
     "                            nome: Rosuvastatina Cálcica 20mg Genérico Medley 30 Comprimidos\n",
     "                            preço: R$ 48,09\n",
     "                            Rosuvastatina Calcica 20mg 30 Comprimidos Revestidos Althaia Generico\\nALTHAIA\\nR$ 79,16\\nR$ 42,19\n",
@@ -39,9 +39,9 @@
     "                            R$105,36\\nR$84,99\\nRubia 75mcg com 84 Comprimidos\n",
     "                            nome: Rubia 75mcg com 84 Comprimidos\n",
     "                            preço: R$ 84,99\n",
-    "                            Extraia o nome e o preço do medicamento no seguinte texto: {description}'''.strip()\n",
+    "                            Extraia o nome e o preço do medicamento no seguinte texto: {description}\"\"\".strip()\n",
     "\n",
-    "print(f'O prompt vai gerar {len(encoding.encode(prompt))} tokens')"
+    "print(f\"O prompt vai gerar {len(encoding.encode(prompt))} tokens\")"
    ]
   },
   {
