--- a/df_fake.ipynb
+++ b/df_fake.ipynb
@@ -17,15 +17,23 @@
    "outputs": [],
    "source": [
     "data = {\n",
-    "    'rede': ['PACHECO', 'ARAÚJO', 'INDIANA'],\n",
-    "    'site': ['https://www.drogariaspacheco.com.br/', 'https://www.araujo.com.br/', 'https://www.farmaciaindiana.com.br/'],\n",
-    "    'local_site': ['pagina principal', 'medicamentos', 'pagina principal'],\n",
-    "    'target': [\"target_pacheco_True.jpg\", \"target_araujo_False.jpg\", \"target_indiana_False.jpg\"],\n",
-    "    'match': [False, False, False]\n",
+    "    \"rede\": [\"PACHECO\", \"ARAÚJO\", \"INDIANA\"],\n",
+    "    \"site\": [\n",
+    "        \"https://www.drogariaspacheco.com.br/\",\n",
+    "        \"https://www.araujo.com.br/\",\n",
+    "        \"https://www.farmaciaindiana.com.br/\",\n",
+    "    ],\n",
+    "    \"local_site\": [\"pagina principal\", \"medicamentos\", \"pagina principal\"],\n",
+    "    \"target\": [\n",
+    "        \"target_pacheco_True.jpg\",\n",
+    "        \"target_araujo_False.jpg\",\n",
+    "        \"target_indiana_False.jpg\",\n",
+    "    ],\n",
+    "    \"match\": [False, False, False],\n",
     "}\n",
     "df_images_fake = pd.DataFrame(data)\n",
-    "excel_file_name = 'planilha_imagens_fake.xlsx'\n",
-    "df_images_fake.to_excel(excel_file_name, index=False) \n"
+    "excel_file_name = \"planilha_imagens_fake.xlsx\"\n",
+    "df_images_fake.to_excel(excel_file_name, index=False)"
    ]
   },
   {
@@ -119,20 +127,30 @@
    "outputs": [],
    "source": [
     "data = {\n",
-    "    'rede': ['PANVEL', 'DROGAL', 'RAIA', 'DROGARIA ROSARIO'],\n",
-    "    'mes': ['October', 'October', 'October', 'October'],\n",
-    "    'ano': [2023, 2023, 2023, 2023],\n",
-    "    'periodo de exposicao': ['Q1', 'Q1', 'Q2', 'Q2'],\n",
-    "    'tipo de acao': ['Type A', 'Type B', 'Type A', 'Type B'],\n",
-    "    'unidade': ['Unit 1', 'Unit 2', 'Unit 1', 'Unit 2'],\n",
-    "    'produto': ['Fosfato Sodico Prednisolona 3mg/ml Solução Oral 60ml Genérico Biosintética', 'DayVit Kids 120ml', 'Decongex Plus Maleato de Clorfeniramina 12mg + Cloridrato Fenillefrina 15mg 12 comprimidos', 'Biozinc Kids 2mg Solução Oral 75ml'],\n",
-    "    'preco do produto': [13.69, 49.59 , 25.69, 29.90],\n",
-    "    'url_site': ['https://www.panvel.com/', 'https://www.drogal.com.br/', 'https://www.drogaraia.com.br/', 'https://www.drogariarosario.com.br/']\n",
+    "    \"rede\": [\"PANVEL\", \"DROGAL\", \"RAIA\", \"DROGARIA ROSARIO\"],\n",
+    "    \"mes\": [\"October\", \"October\", \"October\", \"October\"],\n",
+    "    \"ano\": [2023, 2023, 2023, 2023],\n",
+    "    \"periodo de exposicao\": [\"Q1\", \"Q1\", \"Q2\", \"Q2\"],\n",
+    "    \"tipo de acao\": [\"Type A\", \"Type B\", \"Type A\", \"Type B\"],\n",
+    "    \"unidade\": [\"Unit 1\", \"Unit 2\", \"Unit 1\", \"Unit 2\"],\n",
+    "    \"produto\": [\n",
+    "        \"Fosfato Sodico Prednisolona 3mg/ml Solução Oral 60ml Genérico Biosintética\",\n",
+    "        \"DayVit Kids 120ml\",\n",
+    "        \"Decongex Plus Maleato de Clorfeniramina 12mg + Cloridrato Fenillefrina 15mg 12 comprimidos\",\n",
+    "        \"Biozinc Kids 2mg Solução Oral 75ml\",\n",
+    "    ],\n",
+    "    \"preco do produto\": [13.69, 49.59, 25.69, 29.90],\n",
+    "    \"url_site\": [\n",
+    "        \"https://www.panvel.com/\",\n",
+    "        \"https://www.drogal.com.br/\",\n",
+    "        \"https://www.drogaraia.com.br/\",\n",
+    "        \"https://www.drogariarosario.com.br/\",\n",
+    "    ],\n",
     "}\n",
     "\n",
     "df_price_fake = pd.DataFrame(data)\n",
-    "excel_file_name = 'prices_fake_4sites.xlsx'\n",
-    "df_price_fake.to_excel(excel_file_name, index=False) "
+    "excel_file_name = \"prices_fake_4sites.xlsx\"\n",
+    "df_price_fake.to_excel(excel_file_name, index=False)"
    ]
   },
   {
@@ -264,20 +282,200 @@
     "import pandas as pd\n",
     "\n",
     "data = {\n",
-    "    'rede': ['drogariasaopaulo', 'PACHECO', 'PANVEL', 'ARAÚJO', 'DROGARIA VENANCIO','PAGUE MENOS', 'INDIANA', 'NISSEI', 'EXTRAFARMA', 'DROGAL', 'DROGARIA GLOBO','RAIA', 'DROGASIL', 'drogasmil', 'DROGARIA TAMOIO', 'farmalife', 'DROGARIA ROSARIO','PRECO POPULAR', 'DROGARIA CATARINENSE'],\n",
-    "    'mes': ['January', 'February', 'March', 'April', 'January', 'February', 'March', 'April', 'January', 'February', 'March', 'April', 'January', 'February', 'March', 'April', 'January', 'February', 'March'],\n",
-    "    'ano': [2023, 2023, 2023, 2023, 2023, 2023, 2023, 2023, 2023, 2023, 2023, 2023, 2023, 2023, 2023, 2023, 2023, 2023,2023],\n",
-    "    'periodo de exposicao': ['Q1', 'Q1', 'Q2', 'Q2', 'Q1', 'Q1', 'Q2', 'Q2', 'Q1', 'Q1', 'Q2', 'Q2', 'Q1', 'Q1', 'Q2', 'Q2', 'Q1', 'Q1', 'Q2'],\n",
-    "    'tipo de acao': ['Type A', 'Type B', 'Type A', 'Type B', 'Type A', 'Type B', 'Type A', 'Type B', 'Type A', 'Type B', 'Type A', 'Type B', 'Type A', 'Type B', 'Type A', 'Type B', 'Type A', 'Type B', 'Type A'],\n",
-    "    'unidade': ['Unit 1', 'Unit 2', 'Unit 1', 'Unit 2', 'Unit 1', 'Unit 2', 'Unit 1', 'Unit 2', 'Unit 1', 'Unit 2', 'Unit 1', 'Unit 2', 'Unit 1', 'Unit 2', 'Unit 1', 'Unit 2', 'Unit 1', 'Unit 2', 'Unit 1'],\n",
-    "    'produto': ['Flogoral Aché Menta Spray', 'Biozinc Kids Aché 75ml', 'Vitamina E Vita E Ciclos Ache 60 Capsulas', 'Colidis Gotas 10ml', 'Colidis Ache 5ml', 'Sany D 1.000ui Com 30 Cápsulas', 'Prohn 30 Cápsulas', 'Xarope Decongex Plus Achê 120ml', 'Hidratante Labial Carmed Fini Beijos Efeito Gloss 10g', 'Artrogen Duo 30 Sachês', 'Colidis Gotas 10Ml', 'Decongex Plus Maleato de Clorfeniramina', 'Oxalato de Escitalopram 10mg 60 Comprimidos', 'Descongex Plus - 12 comprimidos', 'Flagass 75mg/ml Emulsão Or 10ml', 'COLIDIS GOTAS FRX10ML', 'Biofenac Aerosol 11,6Mg 60G', 'Simeticona Biosintética 125mg Com 10 Cápsulas', 'Simeticona Biosintética 125mg Com 10 Cápsulas'],\n",
-    "    'preco do produto': [31.69, 33.05, 53.49, 163.09 , 118.97, 19.89, 128.29 , 19.90 , 24.90, 148.99 , 145.19, 25.69, 46.18, 21.99, 16.19, 196.90, 25.99, 5.17, 5.17],\n",
-    "    'url_site': ['https://www.drogariasaopaulo.com.br/', 'https://www.drogariaspacheco.com.br/', 'https://www.panvel.com/', 'https://www.araujo.com.br/', 'https://www.drogariavenancio.com.br/', 'https://www.paguemenos.com.br/', 'https://www.farmaciaindiana.com.br/', 'https://www.farmaciasnissei.com.br/', 'https://www.extrafarma.com.br/', 'https://www.drogal.com.br/', 'https://www.drogariaglobo.com.br/', 'https://www.drogaraia.com.br/', 'https://www.drogasil.com.br/', 'https://www.drogasmil.com.br/', 'https://www.drogariastamoio.com.br/', 'https://www.farmalife.com.br/', 'https://www.drogariarosario.com.br/', 'https://www.precopopular.com.br/', 'https://www.drogariacatarinense.com.br/']\n",
+    "    \"rede\": [\n",
+    "        \"drogariasaopaulo\",\n",
+    "        \"PACHECO\",\n",
+    "        \"PANVEL\",\n",
+    "        \"ARAÚJO\",\n",
+    "        \"DROGARIA VENANCIO\",\n",
+    "        \"PAGUE MENOS\",\n",
+    "        \"INDIANA\",\n",
+    "        \"NISSEI\",\n",
+    "        \"EXTRAFARMA\",\n",
+    "        \"DROGAL\",\n",
+    "        \"DROGARIA GLOBO\",\n",
+    "        \"RAIA\",\n",
+    "        \"DROGASIL\",\n",
+    "        \"drogasmil\",\n",
+    "        \"DROGARIA TAMOIO\",\n",
+    "        \"farmalife\",\n",
+    "        \"DROGARIA ROSARIO\",\n",
+    "        \"PRECO POPULAR\",\n",
+    "        \"DROGARIA CATARINENSE\",\n",
+    "    ],\n",
+    "    \"mes\": [\n",
+    "        \"January\",\n",
+    "        \"February\",\n",
+    "        \"March\",\n",
+    "        \"April\",\n",
+    "        \"January\",\n",
+    "        \"February\",\n",
+    "        \"March\",\n",
+    "        \"April\",\n",
+    "        \"January\",\n",
+    "        \"February\",\n",
+    "        \"March\",\n",
+    "        \"April\",\n",
+    "        \"January\",\n",
+    "        \"February\",\n",
+    "        \"March\",\n",
+    "        \"April\",\n",
+    "        \"January\",\n",
+    "        \"February\",\n",
+    "        \"March\",\n",
+    "    ],\n",
+    "    \"ano\": [\n",
+    "        2023,\n",
+    "        2023,\n",
+    "        2023,\n",
+    "        2023,\n",
+    "        2023,\n",
+    "        2023,\n",
+    "        2023,\n",
+    "        2023,\n",
+    "        2023,\n",
+    "        2023,\n",
+    "        2023,\n",
+    "        2023,\n",
+    "        2023,\n",
+    "        2023,\n",
+    "        2023,\n",
+    "        2023,\n",
+    "        2023,\n",
+    "        2023,\n",
+    "        2023,\n",
+    "    ],\n",
+    "    \"periodo de exposicao\": [\n",
+    "        \"Q1\",\n",
+    "        \"Q1\",\n",
+    "        \"Q2\",\n",
+    "        \"Q2\",\n",
+    "        \"Q1\",\n",
+    "        \"Q1\",\n",
+    "        \"Q2\",\n",
+    "        \"Q2\",\n",
+    "        \"Q1\",\n",
+    "        \"Q1\",\n",
+    "        \"Q2\",\n",
+    "        \"Q2\",\n",
+    "        \"Q1\",\n",
+    "        \"Q1\",\n",
+    "        \"Q2\",\n",
+    "        \"Q2\",\n",
+    "        \"Q1\",\n",
+    "        \"Q1\",\n",
+    "        \"Q2\",\n",
+    "    ],\n",
+    "    \"tipo de acao\": [\n",
+    "        \"Type A\",\n",
+    "        \"Type B\",\n",
+    "        \"Type A\",\n",
+    "        \"Type B\",\n",
+    "        \"Type A\",\n",
+    "        \"Type B\",\n",
+    "        \"Type A\",\n",
+    "        \"Type B\",\n",
+    "        \"Type A\",\n",
+    "        \"Type B\",\n",
+    "        \"Type A\",\n",
+    "        \"Type B\",\n",
+    "        \"Type A\",\n",
+    "        \"Type B\",\n",
+    "        \"Type A\",\n",
+    "        \"Type B\",\n",
+    "        \"Type A\",\n",
+    "        \"Type B\",\n",
+    "        \"Type A\",\n",
+    "    ],\n",
+    "    \"unidade\": [\n",
+    "        \"Unit 1\",\n",
+    "        \"Unit 2\",\n",
+    "        \"Unit 1\",\n",
+    "        \"Unit 2\",\n",
+    "        \"Unit 1\",\n",
+    "        \"Unit 2\",\n",
+    "        \"Unit 1\",\n",
+    "        \"Unit 2\",\n",
+    "        \"Unit 1\",\n",
+    "        \"Unit 2\",\n",
+    "        \"Unit 1\",\n",
+    "        \"Unit 2\",\n",
+    "        \"Unit 1\",\n",
+    "        \"Unit 2\",\n",
+    "        \"Unit 1\",\n",
+    "        \"Unit 2\",\n",
+    "        \"Unit 1\",\n",
+    "        \"Unit 2\",\n",
+    "        \"Unit 1\",\n",
+    "    ],\n",
+    "    \"produto\": [\n",
+    "        \"Flogoral Aché Menta Spray\",\n",
+    "        \"Biozinc Kids Aché 75ml\",\n",
+    "        \"Vitamina E Vita E Ciclos Ache 60 Capsulas\",\n",
+    "        \"Colidis Gotas 10ml\",\n",
+    "        \"Colidis Ache 5ml\",\n",
+    "        \"Sany D 1.000ui Com 30 Cápsulas\",\n",
+    "        \"Prohn 30 Cápsulas\",\n",
+    "        \"Xarope Decongex Plus Achê 120ml\",\n",
+    "        \"Hidratante Labial Carmed Fini Beijos Efeito Gloss 10g\",\n",
+    "        \"Artrogen Duo 30 Sachês\",\n",
+    "        \"Colidis Gotas 10Ml\",\n",
+    "        \"Decongex Plus Maleato de Clorfeniramina\",\n",
+    "        \"Oxalato de Escitalopram 10mg 60 Comprimidos\",\n",
+    "        \"Descongex Plus - 12 comprimidos\",\n",
+    "        \"Flagass 75mg/ml Emulsão Or 10ml\",\n",
+    "        \"COLIDIS GOTAS FRX10ML\",\n",
+    "        \"Biofenac Aerosol 11,6Mg 60G\",\n",
+    "        \"Simeticona Biosintética 125mg Com 10 Cápsulas\",\n",
+    "        \"Simeticona Biosintética 125mg Com 10 Cápsulas\",\n",
+    "    ],\n",
+    "    \"preco do produto\": [\n",
+    "        31.69,\n",
+    "        33.05,\n",
+    "        53.49,\n",
+    "        163.09,\n",
+    "        118.97,\n",
+    "        19.89,\n",
+    "        128.29,\n",
+    "        19.90,\n",
+    "        24.90,\n",
+    "        148.99,\n",
+    "        145.19,\n",
+    "        25.69,\n",
+    "        46.18,\n",
+    "        21.99,\n",
+    "        16.19,\n",
+    "        196.90,\n",
+    "        25.99,\n",
+    "        5.17,\n",
+    "        5.17,\n",
+    "    ],\n",
+    "    \"url_site\": [\n",
+    "        \"https://www.drogariasaopaulo.com.br/\",\n",
+    "        \"https://www.drogariaspacheco.com.br/\",\n",
+    "        \"https://www.panvel.com/\",\n",
+    "        \"https://www.araujo.com.br/\",\n",
+    "        \"https://www.drogariavenancio.com.br/\",\n",
+    "        \"https://www.paguemenos.com.br/\",\n",
+    "        \"https://www.farmaciaindiana.com.br/\",\n",
+    "        \"https://www.farmaciasnissei.com.br/\",\n",
+    "        \"https://www.extrafarma.com.br/\",\n",
+    "        \"https://www.drogal.com.br/\",\n",
+    "        \"https://www.drogariaglobo.com.br/\",\n",
+    "        \"https://www.drogaraia.com.br/\",\n",
+    "        \"https://www.drogasil.com.br/\",\n",
+    "        \"https://www.drogasmil.com.br/\",\n",
+    "        \"https://www.drogariastamoio.com.br/\",\n",
+    "        \"https://www.farmalife.com.br/\",\n",
+    "        \"https://www.drogariarosario.com.br/\",\n",
+    "        \"https://www.precopopular.com.br/\",\n",
+    "        \"https://www.drogariacatarinense.com.br/\",\n",
+    "    ],\n",
     "}\n",
     "\n",
     "df_price_fake = pd.DataFrame(data)\n",
-    "excel_file_name = 'prices_fake_allsites.xlsx'\n",
-    "df_price_fake.to_excel(excel_file_name, index=False) \n"
+    "excel_file_name = \"prices_fake_allsites.xlsx\"\n",
+    "df_price_fake.to_excel(excel_file_name, index=False)"
    ]
   },
   {
