--- a/Test_Get_Match_Images.ipynb
+++ b/Test_Get_Match_Images.ipynb
@@ -15,6 +15,23 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "😁\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('😁')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
    "source": [
     "df = pd.read_excel(\"planilha_imagens_fake.xlsx\")\n",
